# odoo-addons-path

./: .copier-answers.yml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  demo.tape  pyproject.toml  ruff.toml  tox.ini  zensical.toml
.github/workflows/: main.yml  on-release-main.yml  publish.yaml  release.yaml
docs/: cli-reference.md  code-standards.md  codebase-summary.md  getting-started.md  project-overview-pdr.md  python-api.md  supported-layouts.md  system-architecture.md
docs/stylesheets/: hero.css
overrides/: landing.html
site-docs/: demo.tape  zensical.toml
site-docs/docs/: api-reference.md  contributing.md  getting-started.md  index.md  supported-layouts.md
site-docs/docs/javascripts/: commit-count.js  hero-scene.js
site-docs/docs/stylesheets/: hero.css  site.css
site-docs/overrides/: landing.html  main.html
site-docs/site/: 404.html  index.html  search.json  sitemap.xml
site-docs/site/api-reference/: index.html
site-docs/site/assets/stylesheets/classic/: main.96fc3bb8.min.css
site-docs/site/assets/stylesheets/modern/: main.53a7feaf.min.css
site-docs/site/contributing/: index.html
site-docs/site/getting-started/: index.html
site-docs/site/stylesheets/: hero.css
site-docs/site/supported-layouts/: index.html
skills/odoo-addons-path/: SKILL.md
skills/odoo-addons-path/references/: layouts.md
src/odoo_addons_path/: __init__.py  cli.py  detector.py  main.py
tests/: test_get_addons_path.py
tests/data/c2c-new/: Dockerfile
tests/data/c2c/odoo/: Dockerfile
tests/data/doodba/: .copier-answers.yml
tests/data/repo-version-module/server-env/17.0/addon1/: __manifest__.py
(+3 files in other folders)
